c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@volatile.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/volatile.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![feature(raw_ref_op)]
#[derive(Copy, Clone)]
#[repr(C)]
pub struct S {
    pub p: *mut ::core::ffi::c_int,
}
#[no_mangle]
pub static mut volatile_global_struct: S = S {
    p: ::core::ptr::null_mut::<::core::ffi::c_int>(),
};
#[no_mangle]
pub unsafe extern "C" fn test_volatile() {
    let mut vi: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
    let mut i: ::core::ffi::c_int = vi;
    ::core::ptr::write_volatile(&raw mut vi, i);
    let mut pvi: *mut ::core::ffi::c_int = &raw mut vi;
    i = *pvi;
    ::core::ptr::write_volatile(pvi, i);
    ::core::ptr::write_volatile(
        &raw mut volatile_global_struct.p,
        ::core::ptr::read_volatile::<*mut ::core::ffi::c_int>(&raw const volatile_global_struct.p)
            .offset(-1),
    );
    ::core::ptr::read_volatile::<::core::ffi::c_int>(&raw const vi);
    -::core::ptr::read_volatile::<::core::ffi::c_int>(&raw const vi);
    ::core::ptr::read_volatile::<::core::ffi::c_int>(&raw const vi);
    ::core::ptr::read_volatile::<::core::ffi::c_int>(pvi);
    ::core::ptr::read_volatile::<*mut ::core::ffi::c_int>(&raw const volatile_global_struct.p);
    ::core::ptr::read_volatile::<*mut ::core::ffi::c_int>(&raw const volatile_global_struct.p);
    *::core::ptr::read_volatile::<*mut ::core::ffi::c_int>(&raw const volatile_global_struct.p);
}
